--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 <body>
 
 <h2>Mark Wotton's Git Achievements</h2>
-Unlocked       18/      48 <a href="http://github.com/icefox/git-achievements">Git Achievements</a> for 251 points<br>
+Unlocked       18/      48 <a href="http://github.com/icefox/git-achievements">Git Achievements</a> for 261 points<br>
 <ul>
 <li><div class="title">Apprentice Architect (Level 1)</div>  <div class="info">Created a new repository with <a href="http://www.kernel.org/pub/software/scm/git/docs/git-init.html">git-init</a>.</div></li>
 <li><div class="title">Apprentice Architect (Level 2)</div>  <div class="info">Created a new repository with <a href="http://www.kernel.org/pub/software/scm/git/docs/git-init.html">git-init</a>.</div></li>
@@ -59,6 +59,7 @@ Unlocked       18/      48 <a href="http://github.com/icefox/git-achievements">G
 <li><div class="title">Let there be light</div>  <div class="info">Commit without a parent.</div></li>
 <li><div class="title">Master Author (Level 7)</div>  <div class="info">Made 2^Level commits using <a href="http://www.kernel.org/pub/software/scm/git/docs/git-commit.html">git-commit</a>.</div></li>
 <li><div class="title">Master Author (Level 8)</div>  <div class="info">Made 2^Level commits using <a href="http://www.kernel.org/pub/software/scm/git/docs/git-commit.html">git-commit</a>.</div></li>
+<li><div class="title">Master Author (Level 9)</div>  <div class="info">Made 2^Level commits using <a href="http://www.kernel.org/pub/software/scm/git/docs/git-commit.html">git-commit</a>.</div></li>
 <li><div class="title">Master Socialite (Level 7)</div>  <div class="info">pushed a branch to a remote repository using <a href="http://www.kernel.org/pub/software/scm/git/docs/git-push.html">git-push</a></div></li>
 <li><div class="title">Master Socialite (Level 8)</div>  <div class="info">pushed a branch to a remote repository using <a href="http://www.kernel.org/pub/software/scm/git/docs/git-push.html">git-push</a></div></li>
 <li><div class="title">Master Stone Mason (Level 7)</div>  <div class="info">Added files to the index area for inclusion in the next commit with <a href="http://www.kernel.org/pub/software/scm/git/docs/git-add.html">git-add</a></div></li>
@@ -76,34 +77,34 @@ Unlocked       18/      48 <a href="http://github.com/icefox/git-achievements">G
 </ul>
 Git commands sorted by usage:
 <pre style="text-align: left">
-18771 status
-18064 symbolic-ref
- 484 commit
- 313 diff
- 306 push
- 186 checkout
- 159 pull
- 153 add
+19610 status
+18866 symbolic-ref
+ 511 commit
+ 326 diff
+ 313 push
+ 200 checkout
+ 167 add
+ 164 pull
  112 remote
-  67 log
+  68 log
   61 branch
   60 clone
-  41 merge
-  22 rm
+  43 merge
+  23 rm
   20 reset
   19 config
   18 stash
+  17 clean
   14 init
-  10 blame
-   8 clean
+  14 blame
    7 mv
    7 bisect
    4 achievements
    3 reflog
    2 submodule
+   2 rebase
    2 gl
    2 Fri
-   1 rebase
    1 help
    1 fetch
    1 Wed
