--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 <body>
 
 <h2>Mark Wotton's Git Achievements</h2>
-Unlocked       19/      48 <a href="http://github.com/icefox/git-achievements">Git Achievements</a> for 272 points<br>
+Unlocked       19/      48 <a href="http://github.com/icefox/git-achievements">Git Achievements</a> for 278 points<br>
 <ul>
 <li><div class="title">Apprentice Architect (Level 1)</div>  <div class="info">Created a new repository with <a href="http://www.kernel.org/pub/software/scm/git/docs/git-init.html">git-init</a>.</div></li>
 <li><div class="title">Apprentice Architect (Level 2)</div>  <div class="info">Created a new repository with <a href="http://www.kernel.org/pub/software/scm/git/docs/git-init.html">git-init</a>.</div></li>
@@ -69,6 +69,7 @@ Unlocked       19/      48 <a href="http://github.com/icefox/git-achievements">G
 <li><div class="title">Merchant (Level 4)</div>  <div class="info">Added an external repository with <a href="http://www.kernel.org/pub/software/scm/git/docs/git-remote.html">git-remote</a> add.</div></li>
 <li><div class="title">Product Manager (Level 4)</div>  <div class="info">Stash the changes in a dirty working directory away with <a href="http://www.kernel.org/pub/software/scm/git/docs/git-stash.html">git-stash</a>.</div></li>
 <li><div class="title">Seamstress (Level 4)</div>  <div class="info">amended a commit with <a href="http://www.kernel.org/pub/software/scm/git/docs/git-commit.html">git-commit</a> --amend.</div></li>
+<li><div class="title">Seamstress (Level 5)</div>  <div class="info">amended a commit with <a href="http://www.kernel.org/pub/software/scm/git/docs/git-commit.html">git-commit</a> --amend.</div></li>
 <li><div class="title">Socialite (Level 4)</div>  <div class="info">pushed a branch to a remote repository using <a href="http://www.kernel.org/pub/software/scm/git/docs/git-push.html">git-push</a></div></li>
 <li><div class="title">Socialite (Level 5)</div>  <div class="info">pushed a branch to a remote repository using <a href="http://www.kernel.org/pub/software/scm/git/docs/git-push.html">git-push</a></div></li>
 <li><div class="title">Socialite (Level 6)</div>  <div class="info">pushed a branch to a remote repository using <a href="http://www.kernel.org/pub/software/scm/git/docs/git-push.html">git-push</a></div></li>
@@ -79,32 +80,32 @@ Unlocked       19/      48 <a href="http://github.com/icefox/git-achievements">G
 </ul>
 Git commands sorted by usage:
 <pre style="text-align: left">
-20210 status
-19430 symbolic-ref
- 534 commit
- 349 push
- 337 diff
- 207 checkout
- 173 pull
- 173 add
- 120 remote
-  73 log
+20974 status
+20131 symbolic-ref
+ 575 commit
+ 407 push
+ 352 diff
+ 223 checkout
+ 211 add
+ 181 pull
+ 122 remote
+  74 log
   62 clone
   61 branch
-  44 merge
+  49 merge
   23 rm
   21 reset
   20 clean
   19 stash
   19 config
-  16 blame
+  18 blame
   14 init
    7 mv
    7 bisect
    4 achievements
    3 reflog
+   3 rebase
    2 submodule
-   2 rebase
    2 gl
    2 Fri
    1 help
