--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 <body>
 
 <h2>Mark Wotton's Git Achievements</h2>
-Unlocked       20/      48 <a href="http://github.com/icefox/git-achievements">Git Achievements</a> for 280 points<br>
+Unlocked       20/      48 <a href="http://github.com/icefox/git-achievements">Git Achievements</a> for 287 points<br>
 <ul>
 <li><div class="title">Apprentice Architect (Level 1)</div>  <div class="info">Created a new repository with <a href="http://www.kernel.org/pub/software/scm/git/docs/git-init.html">git-init</a>.</div></li>
 <li><div class="title">Apprentice Architect (Level 2)</div>  <div class="info">Created a new repository with <a href="http://www.kernel.org/pub/software/scm/git/docs/git-init.html">git-init</a>.</div></li>
@@ -51,6 +51,7 @@ Unlocked       20/      48 <a href="http://github.com/icefox/git-achievements">G
 <li><div class="title">Author (Level 6)</div>  <div class="info">Made 2^Level commits using <a href="http://www.kernel.org/pub/software/scm/git/docs/git-commit.html">git-commit</a>.</div></li>
 <li><div class="title">Banker (Level 4)</div>  <div class="info">Join two or more development histories together with <a href="http://www.kernel.org/pub/software/scm/git/docs/git-merge.html">git-merge</a>.</div></li>
 <li><div class="title">Banker (Level 5)</div>  <div class="info">Join two or more development histories together with <a href="http://www.kernel.org/pub/software/scm/git/docs/git-merge.html">git-merge</a>.</div></li>
+<li><div class="title">Banker (Level 6)</div>  <div class="info">Join two or more development histories together with <a href="http://www.kernel.org/pub/software/scm/git/docs/git-merge.html">git-merge</a>.</div></li>
 <li><div class="title">Blacksmith (Level 4)</div>  <div class="info">Created a branch using <a href="http://www.kernel.org/pub/software/scm/git/docs/git-checkout.html">git-checkout</a> -b.</div></li>
 <li><div class="title">Caretaker</div>  <div class="info">Added a .gitignore file to a repository.</div></li>
 <li><div class="title">Cleaning lady (Level 5)</div>  <div class="info">Remove untracked files from the working tree with <a href="http://www.kernel.org/pub/software/scm/git/docs/git-clean.html">git-clean</a></div></li>
@@ -81,39 +82,39 @@ Unlocked       20/      48 <a href="http://github.com/icefox/git-achievements">G
 </ul>
 Git commands sorted by usage:
 <pre style="text-align: left">
-21337 status
-20477 symbolic-ref
- 593 commit
- 419 push
- 355 diff
- 233 add
- 227 checkout
- 185 pull
- 122 remote
+22957 status
+22046 symbolic-ref
+ 635 commit
+ 466 push
+ 374 diff
+ 257 checkout
+ 241 add
+ 210 pull
+ 133 remote
   74 log
-  62 clone
-  61 branch
-  51 merge
-  24 stash
-  24 st
+  69 clone
+  64 branch
+  63 merge
+  33 st
+  25 stash
   23 rm
   23 reset
+  22 blame
+  21 config
   20 clean
-  19 config
-  19 blame
-  14 init
+  15 init
    7 mv
    7 bisect
+   5 co
    4 rebase
-   4 co
    4 achievements
    3 reflog
    2 submodule
    2 gl
    2 fetch
+   2 Wed
    2 Fri
    1 help
-   1 Wed
    1 Tue
 </pre>
 <script type="text/javascript">
