--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 <body>
 
 <h2>Mark Wotton's Git Achievements</h2>
-Unlocked       20/      48 <a href="http://github.com/icefox/git-achievements">Git Achievements</a> for 287 points<br>
+Unlocked       20/      48 <a href="http://github.com/icefox/git-achievements">Git Achievements</a> for 293 points<br>
 <ul>
 <li><div class="title">Apprentice Architect (Level 1)</div>  <div class="info">Created a new repository with <a href="http://www.kernel.org/pub/software/scm/git/docs/git-init.html">git-init</a>.</div></li>
 <li><div class="title">Apprentice Architect (Level 2)</div>  <div class="info">Created a new repository with <a href="http://www.kernel.org/pub/software/scm/git/docs/git-init.html">git-init</a>.</div></li>
@@ -46,6 +46,7 @@ Unlocked       20/      48 <a href="http://github.com/icefox/git-achievements">G
 <li><div class="title">Apprentice Stone Mason (Level 1)</div>  <div class="info">Added files to the index area for inclusion in the next commit with <a href="http://www.kernel.org/pub/software/scm/git/docs/git-add.html">git-add</a></div></li>
 <li><div class="title">Apprentice Stone Mason (Level 3)</div>  <div class="info">Added files to the index area for inclusion in the next commit with <a href="http://www.kernel.org/pub/software/scm/git/docs/git-add.html">git-add</a></div></li>
 <li><div class="title">Architect (Level 4)</div>  <div class="info">Created a new repository with <a href="http://www.kernel.org/pub/software/scm/git/docs/git-init.html">git-init</a>.</div></li>
+<li><div class="title">Architect (Level 5)</div>  <div class="info">Created a new repository with <a href="http://www.kernel.org/pub/software/scm/git/docs/git-init.html">git-init</a>.</div></li>
 <li><div class="title">Author (Level 4)</div>  <div class="info">Made 2^Level commits using <a href="http://www.kernel.org/pub/software/scm/git/docs/git-commit.html">git-commit</a>.</div></li>
 <li><div class="title">Author (Level 5)</div>  <div class="info">Made 2^Level commits using <a href="http://www.kernel.org/pub/software/scm/git/docs/git-commit.html">git-commit</a>.</div></li>
 <li><div class="title">Author (Level 6)</div>  <div class="info">Made 2^Level commits using <a href="http://www.kernel.org/pub/software/scm/git/docs/git-commit.html">git-commit</a>.</div></li>
@@ -82,40 +83,40 @@ Unlocked       20/      48 <a href="http://github.com/icefox/git-achievements">G
 </ul>
 Git commands sorted by usage:
 <pre style="text-align: left">
-22957 status
-22046 symbolic-ref
- 635 commit
- 466 push
- 374 diff
- 257 checkout
- 241 add
- 210 pull
- 133 remote
-  74 log
-  69 clone
-  64 branch
-  63 merge
+24447 status
+23507 symbolic-ref
+ 663 commit
+ 477 push
+ 388 diff
+ 279 checkout
+ 244 add
+ 234 pull
+ 135 remote
+  83 log
+  77 clone
+  67 branch
+  64 merge
   33 st
+  26 blame
   25 stash
+  24 reset
   23 rm
-  23 reset
-  22 blame
   21 config
-  20 clean
-  15 init
+  21 clean
+  17 init
    7 mv
    7 bisect
    5 co
+   5 Wed
    4 rebase
    4 achievements
+   4 Tue
    3 reflog
+   3 fetch
    2 submodule
    2 gl
-   2 fetch
-   2 Wed
    2 Fri
    1 help
-   1 Tue
 </pre>
 <script type="text/javascript">
 function showLocked() {
