--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 <body>
 
 <h2>Mark Wotton's Git Achievements</h2>
-Unlocked       21/      48 <a href="http://github.com/icefox/git-achievements">Git Achievements</a> for 296 points<br>
+Unlocked       21/      48 <a href="http://github.com/icefox/git-achievements">Git Achievements</a> for 306 points<br>
 <ul>
 <li><div class="title">Apprentice Architect (Level 1)</div>  <div class="info">Created a new repository with <a href="http://www.kernel.org/pub/software/scm/git/docs/git-init.html">git-init</a>.</div></li>
 <li><div class="title">Apprentice Architect (Level 2)</div>  <div class="info">Created a new repository with <a href="http://www.kernel.org/pub/software/scm/git/docs/git-init.html">git-init</a>.</div></li>
@@ -68,6 +68,7 @@ Unlocked       21/      48 <a href="http://github.com/icefox/git-achievements">G
 <li><div class="title">Master Carpenter (Level        2)</div>  <div class="info">Custom <a href="http://www.kernel.org/pub/software/scm/git/docs/githooks.html">git-hooks</a> are installed which help catch issues before they are shared.</div></li>
 <li><div class="title">Master Socialite (Level 7)</div>  <div class="info">pushed a branch to a remote repository using <a href="http://www.kernel.org/pub/software/scm/git/docs/git-push.html">git-push</a></div></li>
 <li><div class="title">Master Socialite (Level 8)</div>  <div class="info">pushed a branch to a remote repository using <a href="http://www.kernel.org/pub/software/scm/git/docs/git-push.html">git-push</a></div></li>
+<li><div class="title">Master Socialite (Level 9)</div>  <div class="info">pushed a branch to a remote repository using <a href="http://www.kernel.org/pub/software/scm/git/docs/git-push.html">git-push</a></div></li>
 <li><div class="title">Master Stone Mason (Level 7)</div>  <div class="info">Added files to the index area for inclusion in the next commit with <a href="http://www.kernel.org/pub/software/scm/git/docs/git-add.html">git-add</a></div></li>
 <li><div class="title">Master Stone Mason (Level 8)</div>  <div class="info">Added files to the index area for inclusion in the next commit with <a href="http://www.kernel.org/pub/software/scm/git/docs/git-add.html">git-add</a></div></li>
 <li><div class="title">Merchant (Level 4)</div>  <div class="info">Added an external repository with <a href="http://www.kernel.org/pub/software/scm/git/docs/git-remote.html">git-remote</a> add.</div></li>
@@ -84,27 +85,28 @@ Unlocked       21/      48 <a href="http://github.com/icefox/git-achievements">G
 </ul>
 Git commands sorted by usage:
 <pre style="text-align: left">
-25580 status
-24597 symbolic-ref
- 694 commit
- 496 push
- 402 diff
- 289 checkout
+25800 status
+24802 symbolic-ref
+ 709 commit
+ 511 push
+ 406 diff
+ 291 checkout
  259 add
- 252 pull
- 154 remote
+ 257 pull
+ 156 remote
   83 log
   82 clone
   69 branch
   64 merge
   33 st
-  27 blame
+  29 blame
   25 stash
   24 rm
   24 reset
   22 init
   22 clean
   21 config
+  15 Tue
   12 Mon
    7 mv
    7 bisect
@@ -112,7 +114,6 @@ Git commands sorted by usage:
    5 co
    5 Wed
    4 achievements
-   4 Tue
    3 reflog
    3 fetch
    3 Fri
